# MimIR

./: .clang-format  .clangd  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE.TXT  Makefile  Mim_8cmake.html  Mim_8cmake_source.html  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  add__mem_8cpp.html  add__mem_8cpp.js  add__mem_8cpp__incl.map  add__mem_8cpp__incl.md5  add__mem_8cpp_source.html  add__mem_8h.html  add__mem_8h.js  add__mem_8h__dep__incl.map  add__mem_8h__dep__incl.md5  add__mem_8h__incl.map  add__mem_8h__incl.md5  add__mem_8h_source.html  add_mim_plugin_cmake.html  affine.html  affine_2autogen_8h.html  affine_2autogen_8h.js  affine_2autogen_8h__dep__incl.map  affine_2autogen_8h__dep__incl.md5  affine_2autogen_8h__incl.map  affine_2autogen_8h__incl.md5  affine_2autogen_8h_source.html  affine_8cpp.html  affine_8cpp.js  affine_8cpp__incl.map  affine_8cpp__incl.md5  (+10124 more)
dialects/: CMakeLists.txt  foo.cpp  foo.h  matrix.h
dialects/affine/: affine.cpp  affine.h  affine.thorin
dialects/autodiff/: autodiff.cpp  autodiff.h  autodiff.thorin  autodiff_rewrite_inner.cpp  builder.cpp  builder.h  normalizers.cpp  rules.rs
dialects/backend/: backend.cpp  backend.h  backend.thorin
dialects/clos/: clos.cpp  clos.h  clos.thorin  clos_conv.cpp  clos_conv.h  lower_typed_clos.cpp  lower_typed_clos.h  normalize.cpp  normalize.h  normalizers.cpp
dialects/compile/: compile.cpp  compile.h  compile.thorin  normalizers.cpp
dialects/compiler/: compiler.cpp  compiler.h  compiler.thorin
dialects/core/: core.cpp  core.h  core.thorin  normalizers.cpp
dialects/debug/: debug.cpp  debug.h  debug.thorin  normalizers.cpp
dialects/demo/: demo.cpp  demo.h  demo.thorin  normalizers.cpp
dialects/direct/: direct.cpp  direct.h  direct.thorin  normalizers.cpp
dialects/direct_style/: direct_style.cpp  direct_style.h  direct_style.thorin
dialects/fun/: fun.cpp  fun.h  fun.thorin  normalizers.cpp
dialects/haskell/: haskell.cpp  haskell.h  haskell.thorin
dialects/math/: math.cpp  math.h  math.thorin  normalizers.cpp
dialects/matrix/: matrix.cpp  matrix.h  matrix.thorin  normalizers.cpp
dialects/mem/: mem.cpp  mem.h  mem.thorin  normalizers.cpp
dialects/opt/: normalizers.cpp  opt.cpp  opt.h  opt.thorin
dialects/refly/: normalizers.cpp  refly.cpp  refly.h  refly.thorin
dialects/regex/: normalizers_regex.cpp  range_helper.cpp  range_helper.h  regex.cpp  regex.h  regex.thorin
dialects/rusty/: normalizers.cpp  rusty.cpp  rusty.h  rusty.thorin
dialects/std/: std.thorin
dialects/tool/: normalizers.cpp  tool.cpp  tool.h  tool.thorin
examples/: CMakeLists.txt  hello.cpp  sccp.cpp  sccp.h  sccp_analysis.cpp  sccp_main.cpp  sccp_transform.cpp
examples/core/: normalize_add.sexpr
examples/llvm_test/: non_vec.mim  valid_vec.mim  vec_op.mim
gtest/: CMakeLists.txt  ad_test.cpp  automaton.cpp  for_ax.cpp  graph.cpp  helpers.cpp  helpers.h  lexer.cpp  restricted_dep_types.cpp  test.cpp  trie.cpp
libs/automaton/: CMakeLists.txt
lit/: CMakeLists.txt  annex.mim  annex.thorin  arr_pack_performance.mim  arr_pack_performance.thorin  arr_pack_performance.thorin.disabled  assignable_bug.thorin  beta_equiv.mim  beta_equiv.thorin  bndr_as_expr.mim  bndr_as_expr.thorin  commute.mim  dynamic_for.thorin  ext_names.mim  ext_names.thorin  fib.mim  for_2acc.thorin  for_acc.thorin  fun.mim  fun.thorin  group.mim  group.thorin  lam.thorin  lam_body_sigma.mim  lam_body_sigma.thorin  lam_var.mim  lam_var.thorin  lea.thorin  let_ptrn.mim  let_ptrn.thorin  lib.c  lit  lit.cfg.py  lit.site.cfg.py.in  llvm_array_ext.mim  lower_for.thorin  main_loop.mim  main_loop.thorin  main_loop_cn.thorin  main_loop_nom.thorin  (+37 more)
lit/affine/: dynamic_for.mim  dynamic_for.thorin  dynamic_for.thorin.disabled_extract  for_1acc.mim  for_2acc.mim  for_2acc.thorin  for_2acc.thorin.disabled_extract  for_2acc_2types.mim  for_2acc_2types.thorin  for_2acc_2types.thorin.disabled_extract  for_2acc_real.mim  for_2acc_real.thorin  for_2acc_real.thorin.disabled_extract  for_over_mem.mim  for_over_mem.thorin  for_over_mem.thorin.disabled_extract  lower_for.thorin  lower_for.thorin.disabled_extract  transpose.thorin.disabled  transpose.thorin_print_error.disabled
lit/aie2p/: clb.mim  coreid.mim  gemm_tile.mim  mac.mim  mac_4x4x8.mim  srs.mim  srs_i32_16.mim
lit/autodiff/: 2out.mim.disabled  2out.thorin  2out.thorin.disabled  Issue.md  arr.thorin  arr2.thorin  arr3.thorin  arr4 copy.thorin  arr4.thorin  arr5.thorin  arr6.thorin  arr7.thorin  array_acc.thorin  array_acc_single.thorin  array_no_acc.thorin  array_simple.thorin  array_simple_real.thorin  array_simple_store.thorin  autodiff_mult_in_call.mim  autodiff_mult_in_call.thorin  autodiff_mult_in_call2.mim  autodiff_mult_in_call2.thorin  autodiff_mult_in_call2_2.mim  autodiff_mult_in_call2_2.thorin  autodiff_mult_in_call2_3.mim  autodiff_mult_in_call2_3.thorin  autodiff_mult_in_call_cont.mim  autodiff_mult_in_call_cont.thorin  bug.thorin  bug2.thorin  call_autodiff.mim  call_autodiff.thorin  call_autodiff_cont.mim  call_autodiff_cont.thorin  call_autodiff_cont_eval.thorin  call_autodiff_cont_eval.thorin.eval  call_autodiff_eval.thorin  call_autodiff_eval.thorin.eval  call_autodiff_eval2.thorin  call_autodiff_eval2.thorin.eval  (+72 more)
lit/backend/: pow.thorin
lit/cfg/: multi_entry.mim  paper_b.mim  paper_c.mim
lit/clos/: array.mim  array.thorin  bind  bind.mim  bind.thorin  error1.thorin  error2.thorin  error3.thorin  for.thorin  largeArr.thorin  largeArr.thorin.disabled  lib.c  loop.thorin  loop2.thorin  loopDiff.mim  loopDiff.thorin  loopDiff2.mim  loopDiff2.thorin  loopDiffSave.mim  (+46 more)
plugins/: CMakeLists.txt  new_plugin.sh
thorin/: CMakeLists.txt  axiom.cpp  axiom.h  check.cpp  check.h  config.h.in  debug.cpp  debug.h  def.cpp  def.h  dialects.cpp  dialects.h  driver.cpp  driver.h  dump.cpp  error.cpp  error.h  flags.h  lam.cpp  lam.h  lattice.cpp  lattice.h  normalize.cpp  normalize.h  plugin.cpp  plugin.h  rewrite.cpp  rewrite.h  rule.cpp  rule.h  stream.cpp  tables.h  tuple.cpp  tuple.h  world.cpp  world.h
(+2367 files in other folders)
