# must be registered before `add_thorin_plugin` calls
add_custom_target(thorin_all_plugins)

add_subdirectory(affine)
add_subdirectory(autodiff)
add_subdirectory(clos)
add_subdirectory(compile)
add_subdirectory(core)
add_subdirectory(demo)
add_subdirectory(direct)
add_subdirectory(math)
add_subdirectory(matrix)
add_subdirectory(mem)
add_subdirectory(opt)
add_subdirectory(refly)
add_subdirectory(regex)
